[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Dependencies for building your package
build-backend = "setuptools.build_meta" 


[project]
name = "unit_curious"
version = "0.0.1"
authors = [
  { name="Rajaa Lebchiri", email="rajaa.lebchiri@gmail.com" },
]
description = "Explore historical, quirky, and unconventional units of measurement with this easy-to-use Python library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rajaalebchiri/unit_curious"
Issues = "https://github.com/rajaalebchiri/unit_curious/issues"